<resources>
    <string name="app_name">ZaPayApp</string>
    <string name="app_name_folder">ZaPayApp</string>
    <string name="default_notification_channel_id">zpay_default_channel</string>
    <string name="network_conn">Please check network connection!</string>
    <string name="unable_auth">Unable to authenticate.</string>
    <string name="client_not_response">Client not responding.</string>
    <string name="server_not_response">Please try again after sometime !!</string>
    <string name="something_wrong">Something went wrong.</string>
    <string name="retry">Retry</string>
    <string name="something_wrong_check_network">Something went wrong. Please check your network connectivity.</string>
    <string name="show" translatable="false">Show</string>
    <string name="both" translatable="false">Both</string>
    <string name="current_month" translatable="false">Current Month</string>
    <string name="min_current" translatable="false">maxCurrent</string>
    <string name="max_current" translatable="false">minCurrent</string>
    <string name="date_picker" translatable="false">Date Picker</string>
    <string name="time_picker" translatable="false">Time Picker</string>
    <string name="date_ok">OK</string>
    <string name="date_cancel">Cancel</string>
    <string name="user_name">User name</string>
    <string name="mobile">Mobile</string>
    <string name="important">Important</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="agree_and_sign_up">Agree and Sign Up</string>
    <string name="login_text">Login</string>
    <string name="signup_text">Sign Up</string>
    <string name="send">SEND</string>
    <string name="pin">Pin</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="forgot_pin">Forgot Pin</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter your password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="i_agree">I agree</string>
    <string name="term_and_condition_message">"By creating an account, you are agreeing to Zapay's Terms and Conditions</string>
    <string name="term_and_condition_message1">"By checking this box you agree to Zapay's Terms &amp; Conditions and Privacy Policy, as well as our partner Dwolla’s Terms of Service and Privacy Policy</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="wallet">Wallet</string>
    <string name="bank_account">Bank Account</string>
    <string name="account_type">ACCOUNT TYPE</string>
    <string name="transaction">Transactions</string>
    <string name="history">History</string>
    <string name="default_transaction">Default Transactions</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_conditions">Terms &amp; Condition</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="nav_drawer_opened">Navigation Drawer Open</string>
    <string name="nav_drawer_closed">Navigation Drawer Closed</string>
    <string name="all_details">All Details</string>
    <string name="details">Details</string>
    <string name="enter_email_address_with_account">Enter your Email Address associated with your account</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="enter_valid_mobile">Enter valid mobile</string>
    <string name="change_password">Change Password</string>
    <string name="change_date_request">Change date request</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="set_pin">Update Pin</string>
    <string name="lend_money">Lend Money</string>
    <string name="borrow_money">Borrow Money</string>
    <string name="full_name">Full name</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="state">State</string>
    <string name="gender">Gender</string>
    <string name="income_brackets">Income Brackets</string>
    <string name="city">City</string>
    <string name="postal_code">Postal code</string>
    <string name="ssn">SSN</string>
    <string name="last_four_ssn">Last four of SSN</string>
    <string name="dob">Dob</string>
    <string name="age">Age</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone_no">Enter your phone no</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="enter_your_address2">Enter your address(optional)</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="enter_your_postal_code">Enter your postal code</string>
    <string name="enter_your_ssn_code">Enter your ssn code</string>
    <string name="select_dob">Select dob</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="enter_ethnicity">Enter ethnicity(optional)</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="bank_account_setup">Bank Account Setup</string>
    <string name="account_number">Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="Arbitrary_nickname">Arbitrary nickname</string>
    <string name="change">Change</string>
    <string name="add_amount">Add Amount</string>
    <string name="added_in_wallet">Added In Wallet</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="withdrawal_amount">Withdrawal Amount</string>
    <string name="bank_account_add">Bank Account Add</string>
    <string name="bank_account_change">Bank Account Change</string>
    <string name="enter_account_number">Enter account number</string>
    <string name="enter_valid_account_number">Enter valid account number</string>
    <string name="enter_routing_number">Enter routing number</string>
    <string name="enter_valid_routing_number">Enter valid routing number</string>
    <string name="enter_name">Enter name</string>
    <string name="paid">Paid</string>
    <string name="paid_from">Paid from :</string>
    <string name="borrow_summary">Summary</string>
    <string name="borrower">Borrower</string>
    <string name="chat">Chat</string>
    <string name="amount">Amount</string>
    <string name="terms">Terms</string>
    <string name="payments">Payments</string>
    <string name="payment_dates">Payment Dates</string>
    <string name="dates">Dates</string>
    <string name="payback_dates">Payback Dates</string>
    <string name="total_to_pay_back">Total to Pay Back</string>
    <string name="view_all">View All</string>
    <string name="negotiate">Negotiate</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="lending_summary">Summary</string>
    <string name="lender">Lender</string>
    <string name="rating">Rating</string>
    <string name="total_pay">Total Pay</string>
    <string name="negotiated_by">Negotiated By</string>
    <string name="accepted_by">Accepted By</string>
    <string name="chat_send">Send</string>
    <string name="chat_received">Received</string>
    <string name="chat_seen">Seen</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_your_amount">Enter your amount</string>
    <string name="select_terms">Select Terms</string>
    <string name="fee">Fee</string>
    <string name="done">Done</string>
    <string name="filter">Filter By Type</string>
    <string name="percent">%</string>
    <string name="discount">Discount</string>
    <string name="none">None</string>
    <string name="enter_percent">Enter Percent</string>
    <string name="Enter_percent">Enter percent</string>
    <string name="enter_fee">Enter Fee</string>
    <string name="Enter_fee">Enter fee</string>
    <string name="enter_discount">Enter Discount</string>
    <string name="Enter_discount">Enter discount</string>
    <string name="no_of_payments">No. of payment</string>
    <string name="No_Of_Payments">No. Of Payment</string>
    <string name="payback_date">Payback date</string>
    <string name="borrow_summary_">Borrow summary</string>
    <string name="lending_summary_">Lending summary</string>
    <string name="select_contact">Select contact</string>
    <string name="enter_no_of_payment">Enter no of payment</string>
    <string name="start_date">Start Date</string>
    <string name="select_date">Select date</string>
    <string name="first_select_date">First Start Date</string>
    <string name="second_select_date">Second Start Date</string>
    <string name="third_select_date">Third Start Date</string>
    <string name="fourth_select_date">Fourth Start Date</string>
    <string name="fifth_select_date">Fifth Start Date</string>
    <string name="sixth_select_date">Sixth Start Date</string>
    <string name="seventh_select_date">Seventh Start Date</string>
    <string name="eighth_select_date">Eighth Start Date</string>
    <string name="ninth_select_date">Ninth Start Date</string>
    <string name="select">Select</string>
    <string name="do_not_select_past_date">"Don't select past date</string>
    <string name="Selected_Date_Should_Be_Less_Then">Selected Date Should Be Less Then</string>
    <string name="Selected_Date_Should_Be_Greater_Then">Selected Date Should Be Greater Then</string>
    <string name="total_to_payback">Total to Pay Back</string>
    <string name="total_to_receive_back">Total to Receive Back</string>
    <string name="submit">Submit</string>
    <string name="zapay_commission">Zapay Commission</string>
    <string name="after_zapay_commission">After Zapay Commission</string>
    <string name="pending">Pending</string>
    <string name="negotiation">Negotiation</string>
    <string name="accepted">Accepted</string>
    <string name="completed">Completed</string>
    <string name="no_of_installment">No Of Installment:</string>
    <string name="borrow_mode">Borrow Mode:</string>
    <string name="saving">Savings</string>
    <string name="checking">Checking</string>
    <string name="general_ledger">General-ledger</string>
    <string name="accepted_renegotiate">Re-Negotiate</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hello">Hello</string>
    <string name="no_data_found">No data found</string>
    <string name="verify_account">Verify Account</string>
    <string name="add">Add</string>
    <string name="signature">Signature</string>
    <string name="clear">Clear</string>
</resources>