<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#00DC4E43"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:elevation="3dp"
    card_view:cardCornerRadius="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/closeTV"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/clear"
            android:contentDescription="@null"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"/>

        <RelativeLayout
            android:id="@+id/headerRL"
            android:paddingTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_promed"
                android:gravity="center"
                android:text="@string/change_password"
                android:textColor="@color/textColorBold"
                android:textSize="20sp"/>
        </RelativeLayout>

        <View
            android:id="@+id/headerLineView"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/headerRL"
            android:layout_marginTop="10dp"
            android:background="@color/colorLineLightGrey" />

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerLineView"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textAllCaps="true"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColorBold"
                android:textSize="11sp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/edt_bg_selector"
                android:fontFamily="@font/gotha_pro_reg"
                android:hint="@string/enter_old_password"
                android:importantForAutofill="no"
                android:theme="@style/TextInputLayoutAppearance"
                android:textColorHint="@color/textColorBold20Alpha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/textColorBold"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textAllCaps="true"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColorBold"
                android:textSize="11sp"
                android:text="@string/new_password"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:theme="@style/TextInputLayoutAppearance"
                android:background="@drawable/edt_bg_selector"
                android:fontFamily="@font/gotha_pro_reg"
                android:hint="@string/enter_new_password"
                android:importantForAutofill="no"
                android:textColorHint="@color/textColorBold20Alpha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="0dp"
                android:textColor="@color/textColorBold"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:textAllCaps="true"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColorBold"
                android:textSize="11sp"
                android:text="@string/confirm_password"/>

            <EditText
                android:id="@+id/editTextUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:theme="@style/TextInputLayoutAppearance"
                android:background="@drawable/edt_bg_selector"
                android:fontFamily="@font/gotha_pro_reg"
                android:hint="@string/enter_confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="@color/textColorBold20Alpha"
                android:maxLines="1"
                android:textColor="@color/textColorBold"
                android:paddingStart="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textSize="15sp" />

            <com.dd.ShadowLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="52dp"
                app:sl_cornerRadius="56dp"
                android:elevation="3dp"
                app:sl_dx="0dp"
                app:sl_dy="10dp"
                app:sl_shadowColor="#2CFC5C04"
                app:sl_shadowRadius="4dp">


                <TextView
                android:id="@+id/saveTV"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:background="@drawable/rectanguler_button_bg"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:fontFamily="@font/gotha_probol"
                android:layout_gravity="center_horizontal" />
            </com.dd.ShadowLayout>



        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>