<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lendViewBorrow"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="38dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_prolig"
                android:text="@string/amount"
                android:textColor="@color/navTextColor60Alpha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/amountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_prolig"
                android:text="@string/terms"
                android:textColor="@color/navTextColor60Alpha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/termTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="1"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_prolig"
                android:text="@string/payments"
                android:textColor="@color/navTextColor60Alpha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/noOfPaymentTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_prolig"
                android:text="@string/payment_dates"
                android:textColor="@color/navTextColor60Alpha"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/paymentDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gotha_promed"
                android:textColor="@color/textColor"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/dotted"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/gotha_prolig"
        android:text="@string/total_to_payback"
        android:textColor="@color/navTextColor60Alpha"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/totalPayBackTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotha_promed"
        android:layout_marginStart="19dp"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:text=""/>


    <TextView
        android:id="@+id/zapayCommissionTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotha_prolig"
        android:layout_marginStart="19dp"
        android:text="@string/zapay_commission"
        android:textColor="@color/navTextColor60Alpha"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:lineSpacingExtra="5dp"/>

    <TextView
        android:id="@+id/zapayCommissionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotha_promed"
        android:layout_marginStart="19dp"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:text=""/>

    <TextView
        android:id="@+id/afterCommissionTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotha_prolig"
        android:layout_marginStart="19dp"
        android:text="@string/after_zapay_commission"
        android:textColor="@color/navTextColor60Alpha"
        android:textSize="16sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/afterCommissionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotha_promed"
        android:layout_marginStart="19dp"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:text=""/>
</LinearLayout>