<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".activity.SignatureActivity">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/gotha_promed"
        android:includeFontPadding="false"
        android:text="@string/signature"
        android:textColor="@color/navTextColor"
        android:textSize="22sp" />


    <ImageView
        android:id="@+id/closeIV"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@null"
        android:src="@drawable/clear"
        android:tint="@color/navTextColor" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons_container"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/rectanguler_borderr">

        <com.github.gcacace.signaturepad.views.SignaturePad
            android:id="@+id/signatureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:penColor="@color/colorPrimary" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clear_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/clear"
            android:clickable="false"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:enabled="true"
            android:text="@string/save"
            android:clickable="false"/>
    </LinearLayout>
</RelativeLayout>